cabal-version: 2.4
name:          everest
version:       0.1.0.0
description:   See README.md
build-type:    Simple

library
  hs-source-dirs: src
  exposed-modules:
      Everest
    , Everest.PostgreSQL
  build-depends:
      aeson
    , base
    , conduit
    , generic-lens
    , lens
    , mtl
    , postgresql-simple
    , text
    , uuid
  default-language: Haskell2010
  ghc-options: -Wall -Werror
