cabal-version: 2.4
name:          everest
version:       0.1.0.0
description:   See README.md
build-type:    Simple

library
  hs-source-dirs: src
  exposed-modules:
      Everest
    , Everest.JSON

    , Everest.Kafka

    , Everest.PostgreSQL
  build-depends:
      aeson
    , async
    , base
    , bytestring
    , conduit
    , exceptions
    , generic-lens
    , hw-kafka-client
    , lens
    , lens-aeson
    , mtl
    , postgresql-simple
    , resourcet
    , stm
    , stm-chans
    , text
    , time
    , transformers
    , uuid
  default-language: Haskell2010
  ghc-options: -Wall -Werror
